--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1>Md Sohag World !</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="color">Md Sohag</span> world!</h1>
+            <h3>Fundamentals of Web Development</h3>
+            <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS
+                and
+                JavaScript for a website or Web Application so that a user can see and interact with them directly.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-sohag-hasun-9503b31a3/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="img/2.sohag.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
