--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
             <img src="img/2.sohag.png" alt="">
         </div>
     </section>
+    <section class="Big-Dream">
+        <div class="half-width">
+            <img src="img/2.sohag.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h2>Become a Web Developer</h2>
+            <p>Web development is the work involved in developing a website for the Internet (World Wide Web) or an
+                intranet (a private network).[1] Web development can range from developing a simple single static page
+                of plain text to complex web applications, electronic businesses, and social network services. A more
+                comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web
+                design, Web content development, client liaison, client-side/server-side scripting, Web server and
+                network security configuration, and e-commerce development</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mdshohagh.hassun.33">
+                DOWNLODE RESUME
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
