--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="color">Md Sohag</span> world!</h1>
@@ -29,7 +29,7 @@
             <img src="img/2.sohag.png" alt="">
         </div>
     </section>
-    <section class="Big-Dream">
+    <section class="Big-Dream flexible-container">
         <div class="half-width">
             <img src="img/2.sohag.png" alt="">
         </div>
@@ -43,9 +43,30 @@
                 design, Web content development, client liaison, client-side/server-side scripting, Web server and
                 network security configuration, and e-commerce development</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/mdshohagh.hassun.33">
-                DOWNLODE RESUME
+                CONTACT FACEBOOK
             </a>
         </div>
+    </section>
+    <section class="experience-area">
+        <h1> Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3 class="color">2022-Present | Pro Level Developer </h3>
+                <p>Some people process information better when its presented in the form of video or audio. To many,
+                    however, physical books are still the preferred method of learning. Unsure which books to choose for
+                    learning web development? Follow our list and find out.</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby web developer</h1>
+                <h3 class="color">2022-2024 | Hero Learner</h3>
+                <p>A career in web development can be incredibly fun and rewarding. Tons of online courses and tutorials
+                    teach you the basics of web development and advanced topics like Python, Django, Angular, node.js,
+                    Java,
+                    relational databases, and typography. </p>
+            </div>
+        </div>
+
     </section>
 </body>
 
