--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
         </div>
     </section>
     <section class="experience-area">
-        <h1> Experiences</h1>
+        <h1> Experiences :</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Developer</h1>
+            <div id="full" class="experience-item">
+                <h2>Full Stack Developer</h2>
                 <h3 class="color">2022-Present | Pro Level Developer </h3>
                 <p>Some people process information better when its presented in the form of video or audio. To many,
                     however, physical books are still the preferred method of learning. Unsure which books to choose for
                     learning web development? Follow our list and find out.</p>
             </div>
-            <div class="half-width">
-                <h1>Baby web developer</h1>
+            <div id="baby" class="experience-item">
+                <h2>Baby web developer</h2>
                 <h3 class="color">2022-2024 | Hero Learner</h3>
                 <p>A career in web development can be incredibly fun and rewarding. Tons of online courses and tutorials
                     teach you the basics of web development and advanced topics like Python, Django, Angular, node.js,
@@ -69,5 +69,9 @@
 
     </section>
 </body>
+<footer>
+    <p>Magura - Based on your past activity
+        - Update location</p>
+</footer>
 
 </html>
